--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -125,13 +125,13 @@ jobs:
         run: |
           set -e
           set -o pipefail  
-
+        
           OUTPUT=$(make collect-modified-tests SOURCE_REF="${PR_BASE_COMMIT}" TARGET_REF="${COMMIT}")
           
           test_suites=("modified_unit_test_suites" "modified_integration_test_suites" "modified_functional_test_suites" "modified_functional_test_ndc_suites" "modified_functional_test_xdc_suites")
           for suite in "${test_suites[@]}"; do
             value=$(echo "$OUTPUT" | jq -r ".${suite}")
-            echo "$suite=$value" >> $GITHUB_ENV
+            echo "${suite}=${value}" >> $GITHUB_ENV
           done
 
   misc-checks:
