Add flaky test detection by running modified test suites multiple times
- Update Makefile:
  - Create `collect-modified-tests` target to gather modified test suites per category.
  - Modify test targets to accept `TEST_SUITES` and `N_RUNS` variables.
  - Run modified test suites multiple times using `go test -count=$(N_RUNS)` to detect flaky tests.

- Update GitHub Actions workflows:
  - Update `set-up-single-test` job to collect modified test suites and pass them to test jobs.
  - Adjust test jobs to run modified test suites multiple times per category.
  - Optimize test execution by running tests once per category with all modified suites.

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -124,14 +124,15 @@ jobs:
         id: collect_modified_tests
         run: |
           set -e
-          set -o pipefail  
-          
-          OUTPUT="$(make collect-modified-tests SOURCE_REF="${PR_BASE_COMMIT}" TARGET_REF="${COMMIT}")"
-          
+          set -o pipefail
+
+          OUTPUT="$(make collect-modified-tests "SOURCE_REF=${PR_BASE_COMMIT}" "TARGET_REF=${COMMIT}")"
+
           test_suites=("modified_unit_test_suites" "modified_integration_test_suites" "modified_functional_test_suites" "modified_functional_test_ndc_suites" "modified_functional_test_xdc_suites")
+
           for suite in "${test_suites[@]}"; do
-            value=$(echo "$OUTPUT" | jq -r ".${suite}")
-            echo "${suite}=${value}" >> $GITHUB_ENV
+            value=$(echo "$OUTPUT" | jq -r ".\"${suite}\"")  
+            echo "${suite}=${value}" >> "$GITHUB_ENV"
           done
 
   misc-checks:
