Add flaky test detection by running modified test suites multiple times
- Update Makefile:
  - Create `collect-modified-tests` target to gather modified test suites per category.
  - Modify test targets to accept `TEST_SUITES` and `N_RUNS` variables.
  - Run modified test suites multiple times using `go test -count=$(N_RUNS)` to detect flaky tests.

- Update GitHub Actions workflows:
  - Update `set-up-single-test` job to collect modified test suites and pass them to test jobs.
  - Adjust test jobs to run modified test suites multiple times per category.
  - Optimize test execution by running tests once per category with all modified suites.

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -125,7 +125,8 @@ jobs:
         run: |
           set -e
           set -o pipefail
-          @echo "MERGE_BASE=$(MERGE_BASE) COMMIT=$(COMMIT)"
+          
+          echo "MERGE_BASE=${MERGE_BASE} COMMIT=${COMMIT}"
           
           go build -o ./cmd/tools/test/find_altered_tests ./cmd/tools/test/find_altered_tests.go
           
